Working on new layout for Track, Artist, Album, etc.

--- a/projects/69-love-songs.html
+++ b/projects/69-love-songs.html
@@ -76,13 +76,15 @@
           <button onclick="nextTrack();">&#10095;</button>
         </div>
         <div id="shell">
-          <section id="trackInfo">
+          <!-- <section id="trackInfo">
             <h2 id="trackArtist"></h2>
             <h1 id="trackTitle"></h1>
-          </section>
+          </section> -->
           <section id="track-lyrics">
             <div id="track-illustration">
               <img id="trackCover" src="">
+              <h1 id="trackTitle"></h1>
+              <h2 id="trackArtist"></h2>
             </div>
             <div id="track-fullLyrics"></div>
           </section>
