Sidebar has been edited, and a scrollbar has been added.

--- a/projects/69-love-songs.html
+++ b/projects/69-love-songs.html
@@ -76,15 +76,13 @@
           <button onclick="nextTrack();">&#10095;</button>
         </div>
         <div id="shell">
-          <!-- <section id="trackInfo">
-            <h2 id="trackArtist"></h2>
-            <h1 id="trackTitle"></h1>
-          </section> -->
           <section id="track-lyrics">
-            <div id="track-illustration">
+            <div id="track-information">
               <img id="trackCover" src="">
+              <h2 id="trackNumberVolume"></h2>
               <h1 id="trackTitle"></h1>
               <h2 id="trackArtist"></h2>
+              <h2 id="trackAlbum"></h2>
             </div>
             <div id="track-fullLyrics"></div>
           </section>
