First Final Version

--- a/projects/69-love-songs.html
+++ b/projects/69-love-songs.html
@@ -65,12 +65,16 @@
       </div>
       <!-- Lyrics Section -->
       <div id="lyrics-content">
+
+        <div id="home">
+          <p>The Magnetic Fields</p>
+          <img onclick="goHome();" src="../images/projects/69-love-songs/69ls-home.png">
+          <p>69 Love Songs</p>
+        </div>
+
         <div id="main-content">
           <div id="previous">
             <button onclick="previousTrack();">&#10094;</button>
-          </div>
-          <div id="home">
-            <img onclick="goHome();" src="../images/projects/69-love-songs/69ls-home.png">
           </div>
           <div id="next">
             <button onclick="nextTrack();">&#10095;</button>
