Grid CSS has replaced Bootstrap

--- a/projects/grid-project.html
+++ b/projects/grid-project.html
@@ -43,10 +43,12 @@
     </nav>
 
     <!-- Main -->
-    <div class="container">
-      <div id="albumDisplay"></div>
-      <div id="albumCollection"></div>
-    </div>
+    <main id="main-content">
+      <div id="container">
+        <div id="albumDisplay"></div>
+        <div id="albumCollection"></div>
+      </div>
+    </main>
 
     <!-- Handlebars, and jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
