Reduced size of js file using Handlebars.js

--- a/projects/69-love-songs.html
+++ b/projects/69-love-songs.html
@@ -46,11 +46,11 @@
         <div id="shell">
           <section id="albumInfo">
             <h1 id="albumTitle">69 Love Songs</h1>
-            <h2 id="albumArtist">The Magnetic Fields <span id="albumYear">1999</span></h2>
+            <h2 id="albumArtist">The Magnetic Fields (<span id="albumYear">1999</span>)</h2>
           </section>
           <section id="album-trackList">
             <div id="album-cover">
-              <img id="album-link" src="">
+              <img id="album-link" src="https://wmiguel.io/images/projects/69-love-songs/original-cover.jpg">
             </div>
             <div id="album-volumes">
               <div id="volumes">
@@ -81,14 +81,7 @@
           </div>
           <div id="shell">
             <section id="track-lyrics">
-              <div id="track-information">
-                <img id="trackCover" src="">
-                <h3 id="trackNumberVolume"></h3>
-                <h1 id="trackTitle"></h1>
-                <h2 id="trackArtist"></h2>
-                <h2 id="trackAlbum"></h2>
-              </div>
-              <div id="track-fullLyrics"></div>
+
             </section>
           </div>
         </div>
