Updated home page and links

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, user-scalable=no">
+    <meta name="theme-color" content="#999999">
 
     <title>William Miguel</title>
     <link rel="shortcut icon" type="image/png" href="images/wm-favicon.png"/>
@@ -34,17 +35,19 @@
       </div>
       <div id="links-mobile" class="links-mobile">
         <a href="https://wmiguel.io/projects">Projects</a>
-        <a href="https://wmiguel.io/about">About</a>
-        <a href="https://wmiguel.io/contact">Contact</a>
+        <a href="https://wmiguel.io/about" class="in-progress">About</a>
+        <a href="https://wmiguel.io/contact" class="in-progress">Contact</a>
       </div>
     </nav>
 
     <!-- Main -->
     <div id="wm-content">
       <section class="wm-text">
-        <h1>Hi, how are you? 👋</h1>
-        <h2>I'm William, a graphic designer and web developer (in training). Website is still a work in progress.</h2>
-        <p>Find me on <a href="https://www.instagram.com/wmiguel4815/">Instagram</a>, <a href="https://twitter.com/wmiguel4815">Twitter</a> or <a href="https://letterboxd.com/wmiguel4815/">Letterboxd</a> 👍</p>
+        <h1>Hi there! 👋</h1>
+        <h2>I’m William Miguel, a graphic designer and web developer, working in Los Angeles.</h2>
+        <div id="wm-social">
+          <a id="wm-link" target="_blank" href="https://www.instagram.com/wmiguel4815/">Instagram</a> <a id="wm-link" target="_blank" href="https://twitter.com/wmiguel4815">Twitter</a> <a id="wm-link" target="_blank" href="https://letterboxd.com/wmiguel/">Letterboxd</a>
+        </div>
       </section>
     </div>
 
