--- a/projects.html
+++ b/projects.html
@@ -45,75 +45,57 @@
       <section id="wm-text">
         <h1>📂 Projects</h1>
         <h2>I'm William, a graphic designer and web developer (in training). Website is still a work in progress.</h2>
+        <section id="wm-directory">
+          <!-- 69 Love Songs -->
+          <a id="wm-link" href="https://wmiguel.io/projects/69-love-songs">
+            <p>📂</p>
+            69 Love Songs
+          </a>
+          <!-- Arcana Books -->
+          <a href="https://wmiguel.io/projects/arcana-books" class="in-progress" id="wm-link">
+            <p>📂</p>
+            Arcana Books
+          </a>
+          <!-- Blank Check Timeline -->
+          <a href="https://wmiguel.io/projects/blank-check" class="in-progress" id="wm-link">
+            <p>📂</p>
+            Blank Check Timeline
+          </a>
+          <!-- Cinemind Magazine -->
+          <a href="https://wmiguel.io/projects/cinemind-magazine" class="in-progress" id="wm-link">
+            <p>📂</p>
+            Cinemind Magazine
+          </a>
+          <!-- Criterion Channel -->
+          <a href="https://wmiguel.io/projects/criterion-channel" class="in-progress" id="wm-link">
+            <p>📂</p>
+            Criterion Channel
+          </a>
+          <!-- The Grid Album Project -->
+          <a href="https://wmiguel.io/projects/grid-project" id="wm-link">
+            <p>📂</p>
+            The Grid Album Project
+          </a>
+          <!-- Marvel Annual Report -->
+          <a href="https://wmiguel.io/projects/marvel-annual-report" class="in-progress" id="wm-link">
+            <p>📂</p>
+            Marvel Annual Report
+          </a>
+          <!-- Movie Planner -->
+          <a href="https://wmiguel.io/projects/movie-planner" class="in-progress" id="wm-link">
+            <p>📂</p>
+            Movie Planner
+          </a>
+          <!-- Roger Ebert Reviews -->
+          <a href="https://wmiguel.io/projects/roger-ebert" id="wm-link">
+            <p>📂</p>
+            Roger Ebert Reviews
+          </a>
+        </section>
       </section>
 
-      <section id="wm-directory">
-        <!-- 69 Love Songs -->
-        <a href="https://wmiguel.io/projects/69-love-songs">
-          <div id="wm-project">
-            <p>📂</p>
-            <p>69 Love Songs</p>
-          </div>
-        </a>
-        <!-- Arcana Books -->
-        <a href="https://wmiguel.io/projects/arcana-books" class="in-progress">
-          <div id="wm-project">
-            <p>📂</p>
-            <p>Arcana Books</p>
-          </div>
-        </a>
-        <!-- Blank Check Timeline -->
-        <a href="https://wmiguel.io/projects/blank-check" class="in-progress">
-          <div id="wm-project">
-            <p>📂</p>
-            <p>Blank Check Timeline</p>
-          </div>
-        </a>
-        <!-- Cinemind Magazine -->
-        <a href="https://wmiguel.io/projects/cinemind-magazine" class="in-progress">
-          <div id="wm-project">
-            <p>📂</p>
-            <p>Cinemind Magazine</p>
-          </div>
-        </a>
-        <!-- Criterion Channel -->
-        <a href="https://wmiguel.io/projects/criterion-channel" class="in-progress">
-          <div id="wm-project">
-            <p>📂</p>
-            <p>Criterion Channel</p>
-          </div>
-        </a>
-        <!-- The Grid Album Project -->
-        <a href="https://wmiguel.io/projects/grid-project">
-          <div id="wm-project">
-            <p>📂</p>
-            <p>The Grid Album Project</p>
-          </div>
-        </a>
-        <!-- Marvel Annual Report -->
-        <a href="https://wmiguel.io/projects/marvel-annual-report" class="in-progress">
-          <div id="wm-project">
-            <p>📂</p>
-            <p>Marvel Annual Report</p>
-          </div>
-        </a>
-        <!-- Movie Planner -->
-        <a href="https://wmiguel.io/projects/movie-planner" class="in-progress">
-          <div id="wm-project">
-            <p>📂</p>
-            <p>Movie Planner</p>
-          </div>
-        </a>
-        <!-- Roger Ebert Reviews -->
-        <a href="https://wmiguel.io/projects/roger-ebert">
-          <div id="wm-project">
-            <p>📂</p>
-            <p>Roger Ebert Reviews</p>
-          </div>
-        </a>
-
-      </div>
-    </section>
+      
+    </div>
 
     <!-- Scripts -->
     <script>
