updated the home page and project page, new styles

--- a/index.html
+++ b/index.html
@@ -1,66 +1,130 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no, user-scalable=no">
-    <meta name="theme-color" content="#000000">
 
-    <title>William Miguel</title>
-    <link rel="shortcut icon" type="image/png" href="images/wm-favicon.png"/>
+<head>
+  <meta charset="utf-8" name="viewport"
+    content="width=device-width, initial-scale=1.0, shrink-to-fit=no, user-scalable=no">
+  <meta name="theme-color" content="#000000">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <title>William Miguel</title>
+  <link rel="shortcut icon" type="image/png" href="images/wm-favicon.png" />
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/nav.css">
-  </head>
-  <body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
-    <!-- Navbars -->
-    <nav class="header">
-      <div class="title">
-        <h2><a href="https://wmiguel.io/">William Miguel</a> | Graphic Design & Web Development</h2>
-      </div>
-      <div class="links">
-        <a href="https://wmiguel.io/projects">Projects</a>
-        <a href="https://wmiguel.io/about" class="in-progress">About</a>
-        <a href="https://wmiguel.io/contact" class="in-progress">Contact</a>
-      </div>
-    </nav>
-    <nav class="header-mobile">
-      <div class="title-mobile">
-        <h2><a href="https://wmiguel.io/">William Miguel</a></h2>
-        <button class="about-button" onclick="myFunction()">&times;</button>
-      </div>
-      <div id="links-mobile" class="links-mobile">
-        <a href="https://wmiguel.io/projects">Projects</a>
-        <a href="https://wmiguel.io/about" class="in-progress">About</a>
-        <a href="https://wmiguel.io/contact" class="in-progress">Contact</a>
-      </div>
-    </nav>
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/nav.css">
+</head>
 
-    <!-- Main -->
-    <div id="wm-content">
-      <section class="wm-text">
+<body>
+
+  <!-- Navbars -->
+  <nav class="header">
+    <div class="title">
+      <h2><a href="https://wmiguel.io/">William Miguel</a> | Graphic Design & Web Development</h2>
+    </div>
+    <div class="links">
+      <a href="https://wmiguel.io/projects">Projects</a>
+      <a href="https://wmiguel.io/about" class="in-progress">About</a>
+      <a href="https://wmiguel.io/contact" class="in-progress">Contact</a>
+    </div>
+  </nav>
+  <nav class="header-mobile">
+    <div class="title-mobile">
+      <h2><a href="https://wmiguel.io/">William Miguel</a></h2>
+      <button class="about-button" onclick="myFunction()">&times;</button>
+    </div>
+    <div id="links-mobile" class="links-mobile">
+      <a href="https://wmiguel.io/projects">Projects</a>
+      <a href="https://wmiguel.io/about" class="in-progress">About</a>
+      <a href="https://wmiguel.io/contact" class="in-progress">Contact</a>
+    </div>
+  </nav>
+
+  <!-- Main Container -->
+  <div id="wm-content">
+
+    <div class="wm-text">
+
+      <!-- Introduction -->
+      <section class="introduction">
         <h1>Hi there! 👋</h1>
         <h2>I’m William Miguel, a graphic designer and web developer, working in Los Angeles.</h2>
         <div id="wm-social">
-          <a id="wm-link" target="_blank" href="https://www.instagram.com/wmiguel4815/">Instagram</a> <a id="wm-link" target="_blank" href="https://twitter.com/wmiguel4815">Twitter</a> <a id="wm-link" target="_blank" href="https://letterboxd.com/wmiguel/">Letterboxd</a>
+          <a id="wm-link" target="_blank" href="https://www.instagram.com/wmiguel4815/">Instagram</a> <a id="wm-link"
+            target="_blank" href="https://twitter.com/wmiguel4815">Twitter</a> <a id="wm-link" target="_blank"
+            href="https://letterboxd.com/wmiguel/">Letterboxd</a>
         </div>
+      </section>
+
+      <!-- Projects -->
+      <section class="projects">
+        <h3>📂 Projects</h3>
+        <section id="wm-directory">
+          <!-- 69 Love Songs -->
+          <a id="wm-project" href="https://wmiguel.io/projects/69-love-songs">
+            <span>📂</span>
+            <p>69 Love Songs</p>
+          </a>
+          <!-- Arcana Books -->
+          <a id="wm-project" href="https://wmiguel.io/projects/arcana-books" class="in-progress">
+            <span>📂</span>
+            <p>Arcana Books</p>
+          </a>
+          <!-- Blank Check Timeline -->
+          <a id="wm-project" href="https://wmiguel.io/projects/blank-check" class="in-progress">
+            <span>📂</span>
+            <p>Blank Check Timeline</p>
+          </a>
+          <!-- Cinemind Magazine -->
+          <a id="wm-project" href="https://wmiguel.io/projects/cinemind-magazine" class="in-progress">
+            <span>📂</span>
+            <p>Cinemind Magazine</p>
+          </a>
+          <!-- Criterion Channel -->
+          <a id="wm-project" href="https://wmiguel.io/projects/criterion-channel" class="in-progress">
+            <span>📂</span>
+            <p>Criterion Channel</p>
+          </a>
+          <!-- The Grid Album Project -->
+          <a id="wm-project" href="https://wmiguel.io/projects/grid-project">
+            <span>📂</span>
+            <p>The Grid Album Project</p>
+          </a>
+          <!-- Marvel Annual Report -->
+          <a id="wm-project" href="https://wmiguel.io/projects/marvel-annual-report" class="in-progress">
+            <span>📂</span>
+            <p>Marvel Annual Report</p>
+          </a>
+          <!-- Movie Planner -->
+          <a id="wm-project" href="https://wmiguel.io/projects/movie-planner" class="in-progress">
+            <span>📂</span>
+            <p>Movie Planner</p>
+          </a>
+          <!-- Roger Ebert Reviews -->
+          <a id="wm-project" href="https://wmiguel.io/projects/roger-ebert">
+            <span>📂</span>
+            <p>Roger Ebert Reviews</p>
+          </a>
+        </section>
       </section>
     </div>
 
-    <!-- Scripts -->
-    <script>
-      function myFunction() {
-        var x = document.getElementById("links-mobile");
-        if (x.style.display === "block") {
-          x.style.display = "none";
-        } else {
-          x.style.display = "block";
-        }
+  </div>
+
+  <!-- Scripts -->
+  <script>
+    function myFunction() {
+      var x = document.getElementById("links-mobile");
+      if (x.style.display === "block") {
+        x.style.display = "none";
+      } else {
+        x.style.display = "block";
       }
-    </script>
-  </body>
+    }
+  </script>
+</body>
+
 </html>
