fixed heights in responsive css

--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
   <!-- Main Container -->
   <div id="wm-content">
 
-    <div class="wm-text">
+    <div id="wm-text">
 
       <!-- Introduction -->
       <section class="introduction">
         <h1>Hi there! 👋</h1>
         <h2>I’m William Miguel, a graphic designer and web developer, working in Los Angeles.</h2>
         <div id="wm-social">
-          <a id="wm-link" target="_blank" href="https://www.instagram.com/wmiguel4815/">Instagram</a> <a id="wm-link"
-            target="_blank" href="https://twitter.com/wmiguel4815">Twitter</a> <a id="wm-link" target="_blank"
-            href="https://letterboxd.com/wmiguel/">Letterboxd</a>
+          <a id="wm-link" target="_blank" href="https://www.instagram.com/wmiguel4815/">Instagram</a>
+          <a id="wm-link" target="_blank" href="https://twitter.com/wmiguel4815">Twitter</a>
+          <a id="wm-link" target="_blank" href="https://letterboxd.com/wmiguel/">Letterboxd</a>
         </div>
       </section>
 
